# ese5190-final-project-submission

./: .gitmodules  LICENSE  README.md
code/in-progress/: README.md
code/libraries/: README.md
code/reference/: README.md
code/reference/pico4ml_demo/: CMakeLists.txt
code/reference/pico4ml_demo/examples/no_ml_example/: CMakeLists.txt  image_provider.cpp  image_provider.h  main_functions.cpp  settings.h
code/working/: README.md
diagram/: README.md
media/demos/: README.md
media/materials/: README.md
media/troubleshooting/: README.md
